--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Odin recipes</h1>
     <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/lasagna.html" target="_blank">Lasagna</a></li>
+        <li><a href="recipes/chicken-tikka-masala.html" target="_blank">Chicken Tikka Masala</a></li>
+        <li><a href="recipes/tiramisu.html" target="_blank">Tiramisu</a></li>
     </ul>
     
 </body>
